--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the feature branches
   push:
-    branches: [ feature/* ]
+    branches: [ "feature/**" ]
   pull_request:
-    branches: [ feature/* ]
+    branches: [ "feature/**" ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
