--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -35,10 +35,17 @@ jobs:
           draft: true
           prerelease: false
 
+      - name: Upload
+        uses: actions/upload-artifact@v2
+        with:
+          name: package
+          path: "/"
+
       - name: Upload release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: "/"
           asset_content_type: application/zip
                     
   uat:
