--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -39,13 +39,13 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: package
-          path: "/"
+          path: "."
 
       - name: Upload release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "/"
+          asset_path: "."
           asset_content_type: application/zip
                     
   uat:
