--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -46,6 +46,7 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: "."
+          asset_name: "${{ env.tag }}"
           asset_content_type: application/zip
                     
   uat:
