--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,13 +1,9 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
 
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the feature branches
   push:
-    branches: [ "feature/**" ]
-  pull_request:
+    tags:
+      - "v*"
     branches: [ "feature/**" ]
 
   # Allows you to run this workflow manually from the Actions tab
@@ -15,6 +11,7 @@ on:
 
 jobs:
   build:
+    if: contains(github.ref, 'feature')
     runs-on: ubuntu-latest
     environment:
       name: build
