--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,6 +9,14 @@ on:
   workflow_dispatch:
 
 jobs:
+  githubcontext:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: $ {{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+
   build:
     if: contains(github.ref, 'feature')
     runs-on: ubuntu-latest
