--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
         run: echo "$GITHUB_CONTEXT"
 
   build:
-    if: contains(github.ref, 'feature')
+    if: contains(github.event.base_ref, 'feature')
     runs-on: ubuntu-latest
     environment:
       name: build
