--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,14 +34,14 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v2
         with:
-          name: package
-          path: "."
+          name: artifact
+          path: artifact.tar.gz
 
       - name: Upload release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "."
+          asset_path: artifact.tar.gz
           asset_name: "${{ github.ref }}"
           asset_content_type: application/zip
                     
