--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -30,6 +30,12 @@ jobs:
           # Allows for approval
           draft: true
           prerelease: false
+          
+      - name: Download
+        uses: actions/download-artifact@v2
+        with:
+          name: artifact
+          path: ./
 
       - name: Upload
         uses: actions/upload-artifact@v2
