--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-          path: *.tar.gz          
+          path: "*.tar.gz"        
           
       - name: Download
         uses: actions/download-artifact@v2
