--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -34,17 +34,11 @@ jobs:
           name: artifact
           path: "./*"        
           
-      - name: Download
-        uses: actions/download-artifact@v2
-        with:
-          name: artifact
-          path: ./
-
       - name: Upload release
         uses: actions/upload-release-asset@v1
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: artifact.tar.gz
+          asset_path: ./
           asset_name: "${{ github.ref }}"
           asset_content_type: application/zip
                     
