--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -59,4 +59,6 @@ jobs:
         uses: actions/download-artifact@v2
         
       - name: Bash
-        run: cat artifact
+        run: |
+          cd artifact
+          ls | while read i; do echo filename: $i; done
