--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-          path: "./example.txt"        
+          path: "./*"        
           
       - name: Download
         uses: actions/download-artifact@v2
@@ -43,7 +43,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "./example.txt"
+          asset_path: "./"
           asset_name: "${{ github.ref }}"
           asset_content_type: text/plain
                     
