--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,47 +6,45 @@ on:
       - "v*"
 
 jobs:
-  build:
+  dev:
     if: contains(github.event.base_ref, 'feature')
     runs-on: ubuntu-latest
     environment:
-      name: build
+      name: dev
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          # Unpublished release
-          draft: true
-          prerelease: false
-          
       - name: Upload
         uses: actions/upload-artifact@v2
         with:
           name: artifact
-          path: "./example.txt"        
-          
-      - name: Download
-        uses: actions/download-artifact@v2
+          path: |
+          "cdk/**"
+          "!cdk/.venv"
+          "!cdk/cdk.out"
 
-      - name: Upload release
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}        
+      - name: Setup nodejs
+        uses: actions/setup-node@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: "./example.txt"
-          asset_name: "${{ github.ref }}"
-          asset_content_type: text/plain
-                    
+          node-version: '14.x'
+
+      - name: CDK
+        steps:
+          - run: |
+            sudo npm install -g aws-cdk
+            cd cdk
+            pip install --upgrade -r requirements.txt
+            cdk deploy --require-approval never --all
+          shell: bash
+          env:
+            AWS_REGION: ap-southeast-2
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+            AWS_TARGET_ACCOUNT: 227957190059
+
+
   uat:
     # Only runs once approval and upload have occurred - Environment needs 1 or more reviewer(s)!
     needs: build
@@ -57,8 +55,27 @@ jobs:
     steps:
       - name: Download package
         uses: actions/download-artifact@v2
-        
+
       - name: Bash
         run: |
           cd artifact
           ls | while read i; do echo filename: $i; done
+
+      - name: Setup nodejs
+        uses: actions/setup-node@v1
+        with:
+          node-version: '14.x'
+
+      - name: CDK
+        steps:
+          - run: |
+            sudo npm install -g aws-cdk
+            cd cdk
+            pip install --upgrade -r requirements.txt
+            cdk deploy --require-approval never --all
+          shell: bash
+          env:
+            AWS_REGION: ap-southeast-2
+            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+            AWS_TARGET_ACCOUNT: 897994618109
