--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -21,9 +21,9 @@ jobs:
         with:
           name: artifact
           path: |
-          "cdk/**"
-          "!cdk/.venv"
-          "!cdk/cdk.out"
+            cdk/**
+            !cdk/.venv
+            !cdk/cdk.out
 
       - name: Setup nodejs
         uses: actions/setup-node@v1
@@ -31,23 +31,22 @@ jobs:
           node-version: '14.x'
 
       - name: CDK
-        steps:
-          - run: |
-            sudo npm install -g aws-cdk
-            cd cdk
-            pip install --upgrade -r requirements.txt
-            cdk deploy --require-approval never --all
-          shell: bash
-          env:
-            AWS_REGION: ap-southeast-2
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
-            AWS_TARGET_ACCOUNT: 227957190059
+        run: |
+          sudo npm install -g aws-cdk
+          cd cdk
+          pip install --upgrade -r requirements.txt
+          cdk deploy --require-approval never --all
+        shell: bash
+        env:
+          AWS_REGION: ap-southeast-2
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+          AWS_TARGET_ACCOUNT: 227957190059
 
 
   uat:
     # Only runs once approval and upload have occurred - Environment needs 1 or more reviewer(s)!
-    needs: build
+    needs: dev
     runs-on: ubuntu-latest
     environment:
       name: uat
@@ -67,15 +66,14 @@ jobs:
           node-version: '14.x'
 
       - name: CDK
-        steps:
-          - run: |
-            sudo npm install -g aws-cdk
-            cd cdk
-            pip install --upgrade -r requirements.txt
-            cdk deploy --require-approval never --all
-          shell: bash
-          env:
-            AWS_REGION: ap-southeast-2
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
-            AWS_TARGET_ACCOUNT: 897994618109
+        run: |
+          sudo npm install -g aws-cdk
+          cd cdk
+          pip install --upgrade -r requirements.txt
+          cdk deploy --require-approval never --all
+        shell: bash
+        env:
+          AWS_REGION: ap-southeast-2
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.SECRET_ACCESS_KEY }}
+          AWS_TARGET_ACCOUNT: 897994618109
