--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -67,7 +67,9 @@ jobs:
 
       - name: CDK
         run: |
+          cd artifact
           sudo npm install -g aws-cdk
+          cd cdk
           pip install --upgrade -r requirements.txt
           cdk deploy --require-approval never --all
         shell: bash
