--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,12 +2,11 @@ name: CI
 
 on:
   push:
-    tags:
-      - "v*"
+    branches:
+      - "feature/**"
 
 jobs:
   dev:
-    if: contains(github.event.base_ref, 'feature')
     runs-on: ubuntu-latest
     environment:
       name: dev
@@ -62,9 +61,8 @@ jobs:
 
       - name: CDK
         run: |
-          cd artifact
-          ls | while read i; do echo filename: $i; done
           sudo npm install -g aws-cdk
+          cd artifact
           pip install --upgrade -r requirements.txt
           cdk deploy --require-approval never --all
         shell: bash
